--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,9 @@
     <string name="sign_up"><u>Sign Up</u></string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="name">Name</string>
+    <string name="no_notifications_yet">No notifications, yet.</string>
     <string name="enter_name">Enter Name</string>
+    <string name="you_don_t_have_any_notification_right">You don\'t have any notification right.</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="enter_confirm_password">Enter Confirm Password</string>
     <string name="already_have_an_account">Already have an account?</string>
@@ -25,4 +27,6 @@
     <string name="home">Home</string>
     <string name="search">Search</string>
     <string name="calender">Calender</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
