--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,5 @@
     <string name="invalid_card_message">Please enter valid card number</string>
     <string name="about">Please enter about you pet</string>
     <string name="error_breed">Please enter breed</string>
+    <string name="error_weight">Please enter weight</string>
 </resources>
