--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,5 @@
     <string name="enter_breed">Enter Breed</string>
     <string name="enter_description">Please enter description</string>
     <string name="add"><u>Add</u></string>
+    <string name="nodatafound">No data found</string>
 </resources>
